[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/monsterlight.png" type="Texture" id=1]
[ext_resource path="res://sprites/banshee.png" type="Texture" id=2]
[ext_resource path="res://scenes/scripts/Banshee.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0333

[sub_resource type="CircleShape2D" id=3]
radius = 17.0

[sub_resource type="CircleShape2D" id=4]
radius = 32.0

[node name="Banshee" type="KinematicBody2D"]
z_index = 3
script = ExtResource( 3 )

[node name="Raycast" type="RayCast2D" parent="."]
collision_mask = 2

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Light" type="Light2D" parent="."]
texture = ExtResource( 1 )
color = Color( 1, 0.596078, 0.596078, 1 )
shadow_enabled = true

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 27

[node name="Hitbox" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 3 )

[node name="VisionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="Hitbox" type="CollisionPolygon2D" parent="VisionArea"]
polygon = PoolVector2Array( 8, -16, -8, -16, -24, -88, 24, -88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="InteractionArea" to="." method="object_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="object_exited"]
[connection signal="area_entered" from="VisionArea" to="." method="see_player"]
